[package]
name = "stock-new-report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
bson = "2.7.0"
chrono = "0.4.30"
log = "0.4.20"
mongodb = "2.6.1"
serde = "1.0.188"
serde_json = "1.0.105"
